--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
   "license": "MIT",
   "dependencies": {
     "commander": "^2.19.0",
+    "ext-messenger": "^3.0.1",
     "jsdom": "^13.0.0",
     "moment": "^2.22.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "7",
+    "clean-webpack-plugin": "^1.0.0",
+    "copy-webpack-plugin": "^4.6.0",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1"
   }
 }
