--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "7",
     "clean-webpack-plugin": "^1.0.0",
     "copy-webpack-plugin": "^4.6.0",
+    "jest": "^24.0.0",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
   }
