--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,11 @@ typings/
 
 # next.js build output
 .next
+
+# private keys
+*.pem
+
+# publishing credentials
+credentials.env
+
+dist/zoomstats.zip
